# src/routes/index.ts
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import productRoutes from "./product.routes";
-//import customerRoutes from "./customer.routes";
+import authRoutes from "./auth.routes";
 //import orderRoutes from "./order.routes";
 //import couponRoutes from "./coupon.routes";
 
@@ -8,7 +8,7 @@ import productRoutes from "./product.routes";
 const router = Router();
 
 router.use("/products", productRoutes);
-//router.use("/customers", customerRoutes);
+router.use("/auth", authRoutes);
 //router.use("/orders", orderRoutes);
 //router.use("/coupons", couponRoutes);
 
